Fix issues on mobile and tablet with PLP header

--- a/great-western-wine-theme/assets/scss/components/custom/_category.scss
+++ b/great-western-wine-theme/assets/scss/components/custom/_category.scss
@@ -6,15 +6,17 @@
     display: inline-block;
     width: 100%;
     position: relative;
-    float: none;
-
+    
     img {
-        width: 66%;
-        float: right;
-
+        width: 100%;
+        float: none;
+        margin-bottom: 20px;
+        
         @include breakpoint ("medium") {
-            margin-bottom: 10px;
+            width: 66%;
             margin-left: 10px;
+            margin-bottom: 10px;
+            float: right;
         }
     }
 
